--- a/algo/sort/test_sort.ipynb
+++ b/algo/sort/test_sort.ipynb
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "val swap : 'a array -> int -> int -> unit = <fun>\n",
-      "val sort_bubble : 'a array -> unit = <fun>\n"
+      "val sort_bubble : 'a array -> unit = <fun>\n",
+      "val dicho : 'a array -> 'a -> int = <fun>\n"
      ]
     }
    ],
@@ -77,6 +78,33 @@
    "source": [
     "t"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "- : int = 4\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicho [|1;2;4;5;6|] 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -93,9 +121,8 @@
    "nbconverter_exporter": null,
    "pygments_lexer": "OCaml",
    "version": "4.08.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
